Update links to input files

--- a/templates/index.html
+++ b/templates/index.html
@@ -35,13 +35,13 @@
             <input class="btn btn-primary" type="file">
             <br />
             Choose a topic<br>
-            Myeloma<input name="chooseTopic" type="radio" value="https://elliot2878.github.io/decision_tree.github.io/myeloma.txt"> <br>
-            Test Input<input name="chooseTopic" type="radio" value="https://elliot2878.github.io/decision_tree.github.io/test_input.txt"> <br>
-            Cart<input name="chooseTopic" type="radio" value="https://elliot2878.github.io/decision_tree.github.io/cart.cart"> <br>
-            Macbook Repair<input name="chooseTopic" type="radio" value="https://elliot2878.github.io/decision_tree.github.io/macbookrepair.txt"> <br>
-            Visa<input name="chooseTopic" type="radio" value="https://elliot2878.github.io/decision_tree.github.io/visa.txt"> <br>
-            Housing<input name="chooseTopic" type="radio" value="https://elliot2878.github.io/decision_tree.github.io/housing.txt"> <br>
-            Social Security<input name="chooseTopic" type="radio" value="https://elliot2878.github.io/decision_tree.github.io/collect_social.txt"> <br>
+            Myeloma<input name="chooseTopic" type="radio" value="../input/myeloma.txt"> <br>
+            Test Input<input name="chooseTopic" type="radio" value="../input/test_input.txt"> <br>
+            Cart<input name="chooseTopic" type="radio" value="../input/cart.cart"> <br>
+            Macbook Repair<input name="chooseTopic" type="radio" value="../input/macbookrepair.txt"> <br>
+            Visa<input name="chooseTopic" type="radio" value="../input/visa.txt"> <br>
+            Housing<input name="chooseTopic" type="radio" value="../input/housing.txt"> <br>
+            Social Security<input name="chooseTopic" type="radio" value="../input/collect_social.txt"> <br>
             <br />
             <button class="btn btn-primary" onclick="input()">Submit</button>
         </div>
