update index.html by including ESG file

--- a/templates/index.html
+++ b/templates/index.html
@@ -35,6 +35,7 @@
             <input class="btn btn-primary" type="file">
             <br />
             Choose a topic<br>
+            ESG<input name="chooseTopic" type="radio" value="../input/ESG.txt"> <br>
             Myeloma<input name="chooseTopic" type="radio" value="../input/myeloma.txt"> <br>
             Test Input<input name="chooseTopic" type="radio" value="../input/test_input.txt"> <br>
             Cart<input name="chooseTopic" type="radio" value="../input/cart.cart"> <br>
