--- a/templates/index.html
+++ b/templates/index.html
@@ -43,6 +43,7 @@
             Visa<input name="chooseTopic" type="radio" value="../input/visa.txt"> <br>
             Housing<input name="chooseTopic" type="radio" value="../input/housing.txt"> <br>
             Social Security<input name="chooseTopic" type="radio" value="../input/collect_social.txt"> <br>
+            Laptop Repair<input name="chooseTopic" type="radio" value="../input/laptopRepair.txt"> <br>
             <br />
             <button class="btn btn-primary" onclick="input()">Submit</button>
         </div>
