--- a/templates/index.html
+++ b/templates/index.html
@@ -44,6 +44,7 @@
             Housing<input name="chooseTopic" type="radio" value="../input/housing.txt"> <br>
             Social Security<input name="chooseTopic" type="radio" value="../input/collect_social.txt"> <br>
             Laptop Repair<input name="chooseTopic" type="radio" value="../input/laptopRepair.txt"> <br>
+            Antibiotics<input name="chooseTopic" type="radio" value="../input/dynamicAntibiotic.txt"> <br>
             <br />
             <button class="btn btn-primary" onclick="input()">Submit</button>
         </div>
