Updated radio buttons for the new input files
- Updated jQuery link

--- a/templates/index.html
+++ b/templates/index.html
@@ -45,6 +45,8 @@
             Social Security<input name="chooseTopic" type="radio" value="../input/collect_social.txt"> <br>
             Laptop Repair<input name="chooseTopic" type="radio" value="../input/laptopRepair.txt"> <br>
             Antibiotics<input name="chooseTopic" type="radio" value="../input/dynamicAntibiotic.txt"> <br>
+            Trigonometry<input name="chooseTopic" type="radio" value="../input/trigonometry.txt"> <br>
+            Employee-based Immigration<input name="chooseTopic" type="radio" value="../input/immigration.txt"> <br>
             <br />
             <button class="btn btn-primary" onclick="input()">Submit</button>
         </div>
@@ -53,7 +55,7 @@
     <script src="../static/MindFusion.Common.js" type="text/javascript"></script>
     <script src="../static/MindFusion.Diagramming.js" type="text/javascript"></script>
     <script src="../static/homepage.js" type="text/javascript"></script>
-    <script src="../https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js" type="text/javascript"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js" type="text/javascript"></script>
     <!-- <script src="data.js" type="text/javascript"></script> -->
 </body>
 
