Updated radio buttons for the new input files

--- a/templates/index.html
+++ b/templates/index.html
@@ -47,6 +47,9 @@
             Antibiotics<input name="chooseTopic" type="radio" value="../input/dynamicAntibiotic.txt"> <br>
             Trigonometry<input name="chooseTopic" type="radio" value="../input/trigonometry.txt"> <br>
             Employee-based Immigration<input name="chooseTopic" type="radio" value="../input/immigration.txt"> <br>
+            Derivatives<input name="chooseTopic" type="radio" value="../input/derivatives.txt"> <br>
+            Property Appraisal<input name="chooseTopic" type="radio" value="../input/property_appraisal.txt"> <br>
+            Tax-free Exchange<input name="chooseTopic" type="radio" value="../input/tax_free_exchange.txt"> <br>
             <br />
             <button class="btn btn-primary" onclick="input()">Submit</button>
         </div>
