Updated the input file path for GitHub Pages.

--- a/templates/index.html
+++ b/templates/index.html
@@ -35,23 +35,23 @@
             <input class="btn btn-primary" type="file">
             <br />
             Choose a topic<br>
-            ESG<input name="chooseTopic" type="radio" value="../input/ESG.txt"> <br>
-            Myeloma<input name="chooseTopic" type="radio" value="../input/myeloma.txt"> <br>
-            Test Input<input name="chooseTopic" type="radio" value="../input/test_input.txt"> <br>
-            Cart<input name="chooseTopic" type="radio" value="../input/cart.cart"> <br>
-            Macbook Repair<input name="chooseTopic" type="radio" value="../input/macbookrepair.txt"> <br>
-            Visa<input name="chooseTopic" type="radio" value="../input/visa.txt"> <br>
-            Housing<input name="chooseTopic" type="radio" value="../input/housing.txt"> <br>
-            Social Security<input name="chooseTopic" type="radio" value="../input/collect_social.txt"> <br>
-            Laptop Repair<input name="chooseTopic" type="radio" value="../input/laptopRepair.txt"> <br>
-            Antibiotics<input name="chooseTopic" type="radio" value="../input/dynamicAntibiotic.txt"> <br>
-            Trigonometry<input name="chooseTopic" type="radio" value="../input/trigonometry.txt"> <br>
-            Employee-based Immigration<input name="chooseTopic" type="radio" value="../input/immigration.txt"> <br>
-            Derivatives<input name="chooseTopic" type="radio" value="../input/derivatives.txt"> <br>
-            Tax-free Exchange<input name="chooseTopic" type="radio" value="../input/tax_free_exchange.txt"> <br>
-            Series Convergence<input name="chooseTopic" type="radio" value="../input/seriesConvergence.txt"> <br>
-            Commercial Property Appraisal<input name="chooseTopic" type="radio" value="../input/commercialPropertyAppraisal.txt"> <br>
-            Residential Property Appraisal<input name="chooseTopic" type="radio" value="../input/residentialPropertyAppraisal.txt"> <br>
+            ESG<input name="chooseTopic" type="radio" value="https://sprihajha.github.io/DynamicDecisionTree/input/ESG.txt"> <br>
+            Myeloma<input name="chooseTopic" type="radio" value="https://sprihajha.github.io/DynamicDecisionTree/input/myeloma.txt"> <br>
+            Test Input<input name="chooseTopic" type="radio" value="https://sprihajha.github.io/DynamicDecisionTree/input/test_input.txt"> <br>
+            Cart<input name="chooseTopic" type="radio" value="https://sprihajha.github.io/DynamicDecisionTree/input/cart.cart"> <br>
+            Macbook Repair<input name="chooseTopic" type="radio" value="https://sprihajha.github.io/DynamicDecisionTree/input/macbookrepair.txt"> <br>
+            Visa<input name="chooseTopic" type="radio" value="https://sprihajha.github.io/DynamicDecisionTree/input/visa.txt"> <br>
+            Housing<input name="chooseTopic" type="radio" value="https://sprihajha.github.io/DynamicDecisionTree/input/housing.txt"> <br>
+            Social Security<input name="chooseTopic" type="radio" value="https://sprihajha.github.io/DynamicDecisionTree/input/collect_social.txt"> <br>
+            Laptop Repair<input name="chooseTopic" type="radio" value="https://sprihajha.github.io/DynamicDecisionTree/input/laptopRepair.txt"> <br>
+            Antibiotics<input name="chooseTopic" type="radio" value="https://sprihajha.github.io/DynamicDecisionTree/input/dynamicAntibiotic.txt"> <br>
+            Trigonometry<input name="chooseTopic" type="radio" value="https://sprihajha.github.io/DynamicDecisionTree/input/trigonometry.txt"> <br>
+            Employee-based Immigration<input name="chooseTopic" type="radio" value="https://sprihajha.github.io/DynamicDecisionTree/input/immigration.txt"> <br>
+            Derivatives<input name="chooseTopic" type="radio" value="https://sprihajha.github.io/DynamicDecisionTree/input/derivatives.txt"> <br>
+            Tax-free Exchange<input name="chooseTopic" type="radio" value="https://sprihajha.github.io/DynamicDecisionTree/input/tax_free_exchange.txt"> <br>
+            Series Convergence<input name="chooseTopic" type="radio" value="https://sprihajha.github.io/DynamicDecisionTree/input/seriesConvergence.txt"> <br>
+            Commercial Property Appraisal<input name="chooseTopic" type="radio" value="https://sprihajha.github.io/DynamicDecisionTree/input/commercialPropertyAppraisal.txt"> <br>
+            Residential Property Appraisal<input name="chooseTopic" type="radio" value="https://sprihajha.github.io/DynamicDecisionTree/input/residentialPropertyAppraisal.txt"> <br>
             <br />
             <button class="btn btn-primary" onclick="input()">Submit</button>
         </div>
